# samwise

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml  release.yml
core/: Cargo.toml
desktop/: bun.lockb  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  AsyncApp.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/locales/en-US/: common.json
desktop/src-tauri/locales/fr-FR/: common.json
desktop/src-tauri/locales/he-IL/: common.json
desktop/src-tauri/locales/it-IT/: common.json
desktop/src-tauri/locales/pl-PL/: common.json
desktop/src-tauri/locales/pt-BR/: common.json
desktop/src-tauri/src/: custom_protocol.rs  database.rs  main.rs  setup.rs  utils.rs
desktop/src/components/: Chat.tsx  Params.tsx  Summary.tsx  TextArea.tsx
desktop/src/lib/: config.ts  database.ts  dbTest.ts  utils.ts
desktop/src/providers/: Analytics.tsx  Preference.tsx
samwise-text/: Cargo.toml
samwise-text/src/: lib.rs  test.rs  text_generation.rs
scripts/: landing_links.js  pre_build.js  publish.js  stats.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  app.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs  recording_api.rs  setting_api.rs  user_api.rs
src-tauri/src/audio_processor/: audio_recorder.rs  audio_transcription.rs  audio_utils.rs  mod.rs
src-tauri/src/commands/: mod.rs  recording_command.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/models/: mod.rs  recording.rs  setting.rs  user.rs
src-tauri/src/services/: mod.rs  recording_service.rs  setting_service.rs  user_service.rs
src-tauri/src/text_processor/: gemini.rs
src/components/: AudioPlayer.tsx  ChatSection.tsx  ErrorComponent.tsx  MeetingCard.tsx  MeetingDetails.tsx  MeetingDialog.tsx  MeetingList.tsx  SnackbarAlert.tsx  SummarySection.tsx  TranscriptViewer.tsx  UploadDialog.tsx
src/constants/: navigation.ts  prompts.ts  settings.ts
src/contexts/: GlobalContext.tsx
src/layouts/: MainLayout.tsx
src/pages/: Automations.tsx  MeetingDetailsPage.tsx  Meetings.tsx  Settings.tsx  Signup.tsx
src/styles/: theme.ts
src/types/: global.ts
src/utils/: appSettings.ts  meetings.ts  textGeneration.ts  utils.ts
(+8 files in other folders)
