[package]
name = "samwise_text"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = { workspace = true }
eyre = { workspace = true }
tracing = "0.1"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "^1.0.198", features = ["derive"] }
