[package]
name = "samwise"
version = "0.0.0"
description = "Samwise"
authors = ["@DivyamChandel"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "protocol-asset", "dialog-all", "path-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0.86"
chrono = "0.4.38"
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
lazy_static = "1.5.0"
include_dir = "0.7.4"
hound = "3.5.1"
cpal = "0.15.3"
log = "0.4.22"
mp3lame-encoder = "0.2.0"
reqwest = { version = "0.12.5", features = ["json"] }
async-trait = "0.1.81"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
